fix avatar to spacing on mobile
#2yjmmx[review]

--- a/assets/scss/sections/_post-header.scss
+++ b/assets/scss/sections/_post-header.scss
@@ -5,7 +5,7 @@
 		@include bp-down(sm) {
 
 			.entry-header {
-				margin-top: rem-calc(20);
+				margin-top: rem-calc(60);
 			}
 		}
 	}
